--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,8 +27,8 @@ jobs:
         
       - name: Run Command
         run: |
-          git config --local user.email "xiadd0102@gmail.com"
-          git config --local user.name "xiadd"
+          git config --local user.email "isoyu.com@gmail.com"
+          git config --local user.name "insoxin"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git pull --rebase
           yarn start
